--- a/SummaAgents/SummaAgents.csproj
+++ b/SummaAgents/SummaAgents.csproj
@@ -9,4 +9,8 @@
     <GeneratePackageOnBuild>False</GeneratePackageOnBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.9.0" />
+  </ItemGroup>
+
 </Project>
